--- a/WPF_Inventory/WPF_Inventory.csproj
+++ b/WPF_Inventory/WPF_Inventory.csproj
@@ -102,6 +102,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="frm_inventory.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -122,6 +126,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ConnectionString.cs" />
+    <Compile Include="frm_inventory.xaml.cs">
+      <DependentUpon>frm_inventory.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
